2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 487226 - No
	  intellisense in LINQ queries" - 2.

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 487237 - Broken lambda
	  intellisense".

2009-04-01  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: fixed "Bug 487226 - No
	  intellisense in LINQ queries".

2009-03-31  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Worked on C#3 lambda resolving.

2009-03-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Removed debug message.

2009-03-30  Mike Krüger  <mkrueger@novell.com>

	* Parser/NRefactoryParser.cs: implemented 'Bug 363627 - MD
	  text editor does not show folding symbols for preprocessor
	  directives'.

2009-03-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/NRefactoryTemplateParameterDataProvider.cs: Implemented
	  "Bug 324888 - Auto complete not activating in generics".

	* Makefile.am:
	* CSharpBinding.csproj: 

2009-03-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Implemented "Bug 324989 -
	  code completion doesn't strip off 'Attribute' part in
	  Attributes".

2009-03-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Added 'from ... group ... into
	  VAR' case.

2009-03-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/NRefactoryResolver.cs:
	* Gui/NewCSharpExpressionFinder.cs: Worked on lambda resolving
	  (fixing bug 'Bug 487203 - Extension methods not working').

2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* Gui/MemberCompletionData.cs: Fixed "Bug 487209 - Incorrent
	  intellisense for partial methods".

2009-03-23  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Fixed "Bug 487218 - var does not work
	  with arrays".

2009-03-23  Mike Krüger  <mkrueger@novell.com>
