@@ -1,5 +1,10 @@
 2009-04-01  Mike Krüger  <mkrueger@novell.com>
 
+	* Gui/CSharpTextEditorCompletion.cs: Added "var" to the
+	  completion list.
+
+2009-04-01  Mike Krüger  <mkrueger@novell.com>
+
 	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 487226 - No
 	  intellisense in LINQ queries" - 2.
 
